--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/EditorTemplates/MonitoringInformation/_why.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/EditorTemplates/MonitoringInformation/_why.cshtml
@@ -1,7 +1,7 @@
-﻿<div class="text">
+﻿<div class="form-group">
     <details>
-        <summary>Why are we asking all these questions?</summary>
-        <div class="detail-content">
+        <summary><span class="summary">Why are we asking all these questions?</span></summary>
+        <div class="panel panel-border-narrow">
             <p>
                 The Skills Funding Agency aims to make apprenticeships and
                 traineeships inclusive. Learning more about you will help
