--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/EditorTemplates/MonitoringInformation/_disability.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/EditorTemplates/MonitoringInformation/_disability.cshtml
@@ -1,46 +1,54 @@
 ﻿@model MonitoringInformationViewModel
 
-<div class="form-group inline clearfix">
-    <p class="form-label-bold" id="disability-label">Do you have a learning difficulty, disability or health problem?</p>
-    <label for="disability-yes" class="block-label selection-button-radio">
-        @Html.RadioButtonFor(m => m.DisabilityStatus, 1, new { id = "disability-yes", aria_labelledby = "disability-label" }) Yes
-    </label>
-    <label for="disability-no" class="block-label selection-button-radio">
-        @Html.RadioButtonFor(m => m.DisabilityStatus, 2, new { id = "disability-no", aria_labelledby = "disability-label" }) No
-    </label>
-    <label for="disability-prefer-not-to-say" class="block-label selection-button-radio">
-        @Html.RadioButtonFor(m => m.DisabilityStatus, 3, new { id = "disability-prefer-not-to-say", aria_labelledby = "disability-label" }) Prefer not to say
-    </label>
-    <div class="text">
-        <details class="sfa-medium-bottom-margin">
-            <summary>Why we collect this info</summary>
-            <div class="detail-content panel panel-border-narrow">
-                <p>
-                    Employers who are part of the ‘Positive about disabled
-                    people’ scheme will guarantee candidates an interview
-                    who meet the apprenticeship criteria if they have a disability.
-                </p>
-                <p>
-                    For this reason we ask you to provide this information
-                    so we can inform the employer and provider.
-                </p>
-            </div>
-        </details>
-    </div>
+<div class="form-group form-group-compound">
+    <fieldset class="inline">
+        <legend class="form-label-bold sfa-small-bottom-margin" id="disability-label">Do you have a learning difficulty, disability or health problem?</legend>
+
+        <label for="disability-yes" class="block-label selection-button-radio">
+            @Html.RadioButtonFor(m => m.DisabilityStatus, 1, new { id = "disability-yes", aria_labelledby = "disability-label" }) Yes
+        </label>
+        <label for="disability-no" class="block-label selection-button-radio">
+            @Html.RadioButtonFor(m => m.DisabilityStatus, 2, new { id = "disability-no", aria_labelledby = "disability-label" }) No
+        </label>
+        <label for="disability-prefer-not-to-say" class="block-label selection-button-radio">
+            @Html.RadioButtonFor(m => m.DisabilityStatus, 3, new { id = "disability-prefer-not-to-say", aria_labelledby = "disability-label" }) Prefer not to say
+        </label>
+    </fieldset>
 </div>
 
 <div class="form-group">
-    <label for="question4" class="form-label-bold">Is there anything we can do to support your interview?</label>
-    <span class="form-hint">For example, do you need a signer or information in braille</span>
-    <div class="form-group form-group-compound inline hide-nojs">
-        <label data-target="support-panel" for="disability-support-yes" class="block-label selection-button-radio">
-            @Html.RadioButtonFor(m => m.RequiresSupportForInterview, true, new { id = "disability-support-yes", aria_controls = "support-panel", aria_expanded = "false" }) Yes
-        </label>
-        <label for="disability-support-no" class="block-label selection-button-radio hide-nojs">
-            @Html.RadioButtonFor(m => m.RequiresSupportForInterview, false, new { id = "disability-support-no" }) No
-        </label>
-    </div>
-    <div id="support-panel" class="panel panel-border-narrow toggle-content" aria-hidden="true">
-        @Html.FormTextAreaFor(m => m.AnythingWeCanDoToSupportYourInterview, controlHtmlAttributes: new { @data_val_length_max = "4000", rows = "4", role = "textbox", aria_multiline = "true" }, labelHtmlAttributes: new { @class = "form-hint text" })
-    </div>
+    <details>
+        <summary><span class="summary">Why we collect this info</span></summary>
+        <div class="panel panel-border-narrow">
+            <p>
+                Employers who are part of the ‘Positive about disabled people’ scheme
+                will guarantee candidates an interview who meet the apprenticeship
+                criteria if they have a disability.
+            </p>
+            <p>
+                For this reason we ask you to provide this information so we can
+                inform the employer and provider.
+            </p>
+        </div>
+    </details>
+</div>
+
+<div class="form-group">
+    <fieldset class="inline">
+        <legend class="form-label-bold sfa-small-bottom-margin">
+            Is there anything we can do to support your interview?
+            <span class="form-hint">For example, do you need a signer or information in braille</span>
+        </legend>
+        <div class="form-group form-group-compound inline hide-nojs">
+            <label data-target="support-panel" for="disability-support-yes" class="block-label selection-button-radio">
+                @Html.RadioButtonFor(m => m.RequiresSupportForInterview, true, new { id = "disability-support-yes", aria_controls = "support-panel", aria_expanded = "false" }) Yes
+            </label>
+            <label for="disability-support-no" class="block-label selection-button-radio hide-nojs">
+                @Html.RadioButtonFor(m => m.RequiresSupportForInterview, false, new { id = "disability-support-no" }) No
+            </label>
+        </div>
+        <div id="support-panel" class="panel panel-border-narrow toggle-content" aria-hidden="true">
+            @Html.FormTextAreaFor(m => m.AnythingWeCanDoToSupportYourInterview, controlHtmlAttributes: new { @data_val_length_max = "4000", rows = "4", role = "textbox", aria_multiline = "true" })
+        </div>
+    </fieldset>
 </div>
