--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Application/MonitoringInformation.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Application/MonitoringInformation.cshtml
@@ -3,7 +3,7 @@
 @Html.DisplayFor(m => m.ApplicantDetails.DisabilityStatus, "Application/DisabilityStatusQuestion")
 
 <div class="form-group">
-    <p class="form-label-bold">Is there anything we can do to support your interview?</p>
+    <p class="heading-small">Is there anything we can do to support your interview?</p>
     @if (Model.VacancyQuestionAnswers.HasAnythingWeCanDoToSupportYourInterviewAnswer)
     {
         <span id="@Html.IdFor(m => m.VacancyQuestionAnswers.AnythingWeCanDoToSupportYourInterviewAnswer)" class="form-prepopped prewrap">@Html.DisplayFor(m => m.VacancyQuestionAnswers.AnythingWeCanDoToSupportYourInterviewAnswer)</span>
