--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/ValidationSummary.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/ValidationSummary.cshtml
@@ -9,12 +9,12 @@ var hasWarnings = Model.HasWarnings();
 <div id="error-summary" class="error-summary @(!Model.HasErrors() ? "sfa-hide" : "")" role="group" aria-labelledby="error-summary-heading-example-1" tabindex="-1">
 
     <h1 class="heading-medium error-summary-heading" id="error-summary-heading-example-1">
-        Message to alert the user to a problem goes here
+        Please fix these errors
     </h1>
 
-    <p>
+    <!--<p>
         Optional description of the errors and how to correct them
-    </p>
+    </p>-->
 
     <ul class="error-summary-list">
         @foreach (var modelKey in Model.Keys)
@@ -41,15 +41,15 @@ var hasWarnings = Model.HasWarnings();
 
 </div>
 
-<div id="warning-summary" class="warning-summary @(!hasWarnings ? "sfa-hide" : "")" role="group" aria-labelledby="error-summary-heading-example-1" tabindex="-1">
+<div id="error-summary" class="error-summary @(!hasWarnings ? "sfa-hide" : "")" role="group" aria-labelledby="error-summary-heading-example-1" tabindex="-1">
 
     <h1 class="heading-medium error-summary-heading" id="error-summary-heading-example-1">
-        Message to alert the user to a problem goes here
+        Please fix these errors
     </h1>
 
-    <p>
+    <!--<p>
         Optional description of the errors and how to correct them
-    </p>
+    </p>-->
 
     <ul class="error-summary-list">
         @foreach (var modelKey in Model.Keys)
