--- a/src/SFA.Apprenticeships.Web.Manage/Views/Report/VacancyTrackerCsv.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Report/VacancyTrackerCsv.cshtml
@@ -30,10 +30,10 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <button id="btnValidate" type="submit" class="button" name="VacanciesListCsv" value="ValidateVacanciesListCsv">Get CSV Link</button>
+                <button id="btnValidate" type="submit" class="button" name="VacancyTrackerCsv" value="ValidateVacancyTrackerCsv">Get CSV Link</button>
                 @if (Model.IsValid)
                 {
-                    <button id="btnReject" type="submit" class="button-link" name="VacanciesListCsv" value="DownloadVacanciesListCsv">Download CSV</button>
+                    <button id="btnReject" type="submit" class="button-link" name="VacancyTrackerCsv" value="DownloadVacancyTrackerCsv">Download CSV</button>
                 }
             </div>
         </div>
