Add sfa-button-secondary class and replace all link-buttons with it

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Account/VerifyMobile.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Account/VerifyMobile.cshtml
@@ -23,37 +23,36 @@
     </div>
 </div>
 
-
-<p class="text">To receive notifications via text message, you'll need to verify your mobile number by entering the code that was sent to your mobile phone.</p>
-
-
-@using (Html.BeginRouteForm(CandidateRouteNames.VerifyMobile, FormMethod.Post, new { @id = "verify-mobile-form" }))
-{
-    @Html.AntiForgeryToken()
-    @Html.Partial("ValidationSummary", ViewData.ModelState)
-
-    <fieldset>
-
-        <div class="form-group">
-            <p class="form-label-bold">Mobile number</p>
-            <span class="form-prepopped" id="phoneNumber">@Model.PhoneNumber</span>
-            @Html.HiddenFor(m => m.PhoneNumber)
-            @Html.HiddenFor(m => m.ReturnUrl)
-        </div>
+<div class="grid-row">
+    <div class="column-two-thirds">
+        <p>To receive notifications via text message, you'll need to verify your mobile number by entering the code that was sent to your mobile phone.</p>
 
 
-        @Html.FormTextFor(
+        @using (Html.BeginRouteForm(CandidateRouteNames.VerifyMobile, FormMethod.Post, new { @id = "verify-mobile-form" }))
+        {
+            @Html.AntiForgeryToken()
+            @Html.Partial("ValidationSummary", ViewData.ModelState)
+
+                <div class="form-group">
+                    <label class="form-label-bold">Mobile number</label>
+                    <span class="form-prepopped" id="phoneNumber">@Model.PhoneNumber</span>
+                    
+                    @Html.HiddenFor(m => m.PhoneNumber)
+                    @Html.HiddenFor(m => m.ReturnUrl)
+                </div>
+
+
+                @Html.FormTextFor(
         m => m.VerifyMobileCode,
         controlHtmlAttributes: new { @maxlength = "4", autofocus = "autofocus" },
         containerHtmlAttributes: new { @class = "form-group-withlink" })
-    </fieldset>
-    <div class="form-group">
-        <button class="button hide-button" type="submit" name="VerifyMobileAction" value="VerifyMobile" tabindex="-1">Verify number</button>
-        <button id="ResendMobileVerificationCodeLink" type="submit" name="VerifyMobileAction" class="button-link" value="Resend" formnovalidate>Resend code</button>
-        <p>
-            <button class="button" id="verify-code-button" type="submit" name="VerifyMobileAction" value="VerifyMobile">Verify number</button>
-        </p>
+            <div class="form-group">
+                <button class="button" id="verify-code-button" type="submit" name="VerifyMobileAction" value="VerifyMobile">Verify number</button>
+                <button class="button hide-button" type="submit" name="VerifyMobileAction" value="VerifyMobile" tabindex="-1">Verify number</button>
+                <button id="ResendMobileVerificationCodeLink" type="submit" name="VerifyMobileAction" class="sfa-button-secondary" value="Resend" formnovalidate>Resend code</button>
+                <a id="ResendMobileVerificationCodeLink" type="submit" name="VerifyMobileAction" class="sfa-button-secondary" value="Resend" formnovalidate>Resend code</a>
+            </div>
+        }
     </div>
-}
-
+</div>
 
