--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Index.cshtml
@@ -84,7 +84,7 @@
 
                     @if (anySavedSearches)
                     {
-                        <button class="button tabbed-element @savedSearchesTabClass @savedSearchesElementControlClass" id="run-saved-search-button">Run search</button>
+                        <button class="button tabbed-element @savedSearchesTabClass @savedSearchesElementControlClass" id="run--button">Run search</button>
                     }
                 </div>
 
