--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/_sfa-custom-layouts.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/_sfa-custom-layouts.scss
@@ -1,6 +1,7 @@
 ﻿@import "_colours";
 @import "_conditionals";
-
+@import '_shims';
+@import '_css3';
 
 /* -------------------------------------------------------------------
 SFA navigation
@@ -244,9 +245,25 @@ Tabbed content
 }
 
 /* -------------------------------------------------------------------
+Saved searches
+------------------------------------------------------------------- */
+.sfa-saved-search {
+    &:last-child {
+        margin-bottom:0 !important;
+    }
+}
+
+/* -------------------------------------------------------------------
 Custom Typography
 ------------------------------------------------------------------- */
 
+.sfa-table-basic {
+    width:auto;
+    th, td {
+        border-bottom:none;
+        padding:0 0.75em 0.75em 0;
+    }
+}
 
 /* -------------------------------------------------------------------
 Misc - TO BE ORGANISED
