--- a/src/SFA.Apprenticeships.Web.Manage/Views/Report/RegisteredCandidatesCsv.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Report/RegisteredCandidatesCsv.cshtml
@@ -82,7 +82,7 @@
                 <button id="btnValidate" type="submit" class="button" name="RegisteredCandidatesCsv" value="ValidateRegisteredCandidatesCsv">Get CSV Link</button>
                 @if (Model.IsValid)
                 {
-                    <button id="btnReject" type="submit" class="button-link" name="RegisteredCandidatesCsv" value="DownloadRegisteredCandidatesCsv">Download CSV</button>
+                    <button id="btnReject" type="submit" class=".sfa-button-secondary" name="RegisteredCandidatesCsv" value="DownloadRegisteredCandidatesCsv">Download CSV</button>
                 }
             </div>
         </div>
