--- a/src/SFA.Apprenticeships.Web.Manage/Views/Report/SuccessfulCandidatesCsv.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Report/SuccessfulCandidatesCsv.cshtml
@@ -75,7 +75,7 @@
                 <button id="btnValidate" type="submit" class="button" name="SuccessfulCandidatesCsv" value="ValidateSuccessfulCandidatesCsv">Get CSV Link</button>
                 @if (Model.IsValid)
                 {
-                    <button id="btnReject" type="submit" class="button-link" name="SuccessfulCandidatesCsv" value="DownloadSuccessfulCandidatesCsv">Download CSV</button>
+                    <button id="btnReject" type="submit" class=".sfa-button-secondary" name="SuccessfulCandidatesCsv" value="DownloadSuccessfulCandidatesCsv">Download CSV</button>
                 }
             </div>
         </div>
