--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Report/ApplicationsReceived.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Report/ApplicationsReceived.cshtml
@@ -32,9 +32,9 @@
             <button id="ValidateReportParameters" type="submit" class="button" name="ApplicationsReceived" value="ValidateApplicationsReceived">Export CSV</button>
             @if (Model.IsValid)
             {
-                <button id="DownloadReport" type="submit" class="button-link hidden" name="ApplicationsReceived" value="DownloadApplicationsReceived">Download CSV</button>
+                <button id="DownloadReport" type="submit" class=".sfa-button-secondary hidden" name="ApplicationsReceived" value="DownloadApplicationsReceived">Download CSV</button>
                 <noscript>
-                    <button id="DownloadReportNoJs" type="submit" class="button-link" name="ApplicationsReceived" value="DownloadApplicationsReceived">Download CSV</button>
+                    <button id="DownloadReportNoJs" type="submit" class=".sfa-button-secondary" name="ApplicationsReceived" value="DownloadApplicationsReceived">Download CSV</button>
                 </noscript>
             }
             <p class="sfa-medium-bottom-margin">
