--- a/src/SFA.Apprenticeships.Web.Manage/Views/Report/VacanciesListCsv.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Report/VacanciesListCsv.cshtml
@@ -34,7 +34,7 @@
                 <button id="btnValidate" type="submit" class="button" name="VacanciesListCsv" value="ValidateVacanciesListCsv">Get CSV Link</button>
                 @if (Model.IsValid)
                 {
-                    <button id="btnReject" type="submit" class="button-link" name="VacanciesListCsv" value="DownloadVacanciesListCsv">Download CSV</button>
+                    <button id="btnReject" type="submit" class=".sfa-button-secondary" name="VacanciesListCsv" value="DownloadVacanciesListCsv">Download CSV</button>
                 }
             </div>
         </div>
