--- a/src/SFA.Apprenticeships.Web.Candidate/Content/_assets/css/styles.css
+++ b/src/SFA.Apprenticeships.Web.Candidate/Content/_assets/css/styles.css
@@ -1,4 +1,9 @@
 @charset "UTF-8";
+.grid-row:after, #content:after, .notice:after, .panel:after, fieldset:after, .form-section:after, .form-group:after, .form-block:after, .breadcrumbs ol:after {
+  content: "";
+  display: block;
+  clear: both; }
+
 /* -------------------------------------------------------------------
 SFA navigation
 ------------------------------------------------------------------- */
@@ -14,10 +19,10 @@ SFA navigation
         float: right !important;
         font-size: 16px; } }
     .sfa-navigation-wrapper .sfa-navigation .sfa-navigation-items a {
-      padding: 0 5px 0 0; }
+      margin: 0 5px 0 0; }
       @media (min-width: 769px) {
         .sfa-navigation-wrapper .sfa-navigation .sfa-navigation-items a {
-          padding: 0 0 0 5px; } }
+          margin: 0 0 0 5px; } }
     .sfa-navigation-wrapper .sfa-navigation .sfa-user-navigation {
       margin-bottom: 5px; }
       .sfa-navigation-wrapper .sfa-navigation .sfa-user-navigation span {
@@ -57,6 +62,18 @@ Hide element (window size)
   @media (min-width: 769px) {
     .sfa-hide-desktop {
       display: none; } }
+
+.sfa-hide-button {
+  background: transparent !important;
+  border: 0 !important;
+  border: none !important;
+  color: transparent !important;
+  display: none !important;
+  width: 0 !important;
+  height: 0 !important;
+  margin: 0 !important;
+  overflow: visible !important;
+  padding: 0 !important; }
 
 /* -------------------------------------------------------------------
 Custom margins
@@ -136,6 +153,22 @@ Custom form elements
   .sfa-form-radio input, .sfa-form-checkbox input {
     margin-left: -18px !important; }
 
+.sfa-form-control-after {
+  font-family: "nta", Arial, sans-serif;
+  font-weight: 400;
+  text-transform: none;
+  font-size: 16px;
+  line-height: 1.25;
+  display: block;
+  color: #6f777b;
+  font-weight: normal;
+  padding-top: 2px;
+  padding-bottom: 2px; }
+  @media (min-width: 641px) {
+    .sfa-form-control-after {
+      font-size: 19px;
+      line-height: 1.31579; } }
+
 /* -------------------------------------------------------------------
 Categories and sub-categories
 ------------------------------------------------------------------- */
@@ -163,8 +196,20 @@ Tabbed content
     display: inline-block !important; }
 
 /* -------------------------------------------------------------------
+Saved searches
+------------------------------------------------------------------- */
+.sfa-saved-search:last-child {
+  margin-bottom: 0 !important; }
+
+/* -------------------------------------------------------------------
 Custom Typography
 ------------------------------------------------------------------- */
+.sfa-table-basic {
+  width: auto; }
+  .sfa-table-basic th, .sfa-table-basic td {
+    border-bottom: none;
+    padding: 0 0.75em 0.75em 0; }
+
 /* -------------------------------------------------------------------
 Misc - TO BE ORGANISED
 ------------------------------------------------------------------- */
@@ -177,11 +222,26 @@ Misc - TO BE ORGANISED
 .no-margins {
   margin: 0 !important; }
 
+.sfa-no-right-margin {
+  margin-right: 0 !important; }
+
+.sfa-no-left-margin {
+  margin-left: 0 !important; }
+
 .sfa-no-bottom-margin {
   margin-bottom: 0 !important; }
 
+.sfa-no-top-margin {
+  margin-top: 0 !important; }
+
 .sfa-align-right {
   text-align: right; }
+  @media (min-width: 641px) {
+    .sfa-align-right-tablet {
+      text-align: right; } }
+
+.sfa-align-center {
+  text-align: center; }
 
 .sfa-align-center {
   text-align: center; }
@@ -309,6 +369,11 @@ iframe, object, embed {
 .govuk-related-items ul li.related-items-more {
   font-weight: bold; }
 
+.grid-row:after, #content:after, .notice:after, .panel:after, fieldset:after, .form-section:after, .form-group:after, .form-block:after, .breadcrumbs ol:after {
+  content: "";
+  display: block;
+  clear: both; }
+
 .button-link {
   font-family: "nta",Arial,sans-serif;
   font-size: 19px;
@@ -322,7 +387,7 @@ iframe, object, embed {
   display: inline-block;
   line-height: 1.4;
   margin: 0 15px 15px 0;
-  padding: 7px 10px 5px 0;
+  padding: .526315em .789473em .263157em;
   text-decoration: underline;
   vertical-align: top;
   -webkit-font-smoothing: antialiased; }
@@ -345,6 +410,93 @@ iframe, object, embed {
 
 .button-link:focus {
   outline: 3px solid #ffbf47; }
+
+.sfa-button-secondary {
+  background-color: transparent;
+  position: relative;
+  display: -moz-inline-stack;
+  display: inline-block;
+  padding: .526315em .789473em .263157em;
+  border: none;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+  -webkit-appearance: none;
+  -webkit-box-shadow: 0 2px 0 transparent;
+  -moz-box-shadow: 0 2px 0 transparent;
+  box-shadow: 0 2px 0 transparent;
+  font-size: 1em;
+  line-height: 1.25;
+  text-decoration: none;
+  -webkit-font-smoothing: antialiased;
+  cursor: pointer;
+  color: #fff;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  vertical-align: top;
+  color: #005ea5;
+  text-decoration: underline; }
+  .sfa-button-secondary:visited {
+    background-color: transparent; }
+  .sfa-button-secondary:hover, .sfa-button-secondary:focus {
+    background-color: transparent; }
+  .sfa-button-secondary:active {
+    top: 2px;
+    -webkit-box-shadow: 0 0 0 transparent;
+    -moz-box-shadow: 0 0 0 transparent;
+    box-shadow: 0 0 0 transparent; }
+  .sfa-button-secondary.disabled, .sfa-button-secondary[disabled="disabled"], .sfa-button-secondary[disabled] {
+    zoom: 1;
+    filter: alpha(opacity=50);
+    opacity: 0.5; }
+    .sfa-button-secondary.disabled:hover, .sfa-button-secondary[disabled="disabled"]:hover, .sfa-button-secondary[disabled]:hover {
+      cursor: default;
+      background-color: transparent; }
+    .sfa-button-secondary.disabled:active, .sfa-button-secondary[disabled="disabled"]:active, .sfa-button-secondary[disabled]:active {
+      top: 0;
+      -webkit-box-shadow: 0 2px 0 transparent;
+      -moz-box-shadow: 0 2px 0 transparent;
+      box-shadow: 0 2px 0 transparent; }
+  .sfa-button-secondary:link, .sfa-button-secondary:hover, .sfa-button-secondary:focus, .sfa-button-secondary:visited {
+    color: #fff; }
+  .sfa-button-secondary:before {
+    content: "";
+    height: 110%;
+    width: 100%;
+    display: block;
+    background: transparent;
+    position: absolute;
+    top: 0;
+    left: 0; }
+  .sfa-button-secondary:active:before {
+    top: -10%;
+    height: 120%; }
+  @media (max-width: 640px) {
+    .sfa-button-secondary {
+      width: 100%;
+      text-align: center;
+      margin-top: 0.75em; } }
+  .sfa-button-secondary:focus {
+    outline: 3px solid #ffbf47;
+    -webkit-box-shadow: 0 2px 0 #ffbf47;
+    -moz-box-shadow: 0 2px 0 #ffbf47;
+    box-shadow: 0 2px 0 #ffbf47; }
+  .sfa-button-secondary:visited {
+    color: #005ea5; }
+  .sfa-button-secondary:hover {
+    color: #2b8cc4; }
+  .sfa-button-secondary:active {
+    top: 0;
+    color: #2b8cc4;
+    background: #ffbf47; }
+
+.sfa-button-secondary[disabled="disabled"] {
+  background: #00823b; }
+  .sfa-button-secondary[disabled="disabled"]:focus {
+    outline: none; }
+  .sfa-button-secondary[disabled="disabled"]:hover {
+    color: #005ea5; }
 
 .tabbed-nav {
   border-bottom: 1px solid #bfc1c3; }
