--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Account/VerifyMobile.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Account/VerifyMobile.cshtml
@@ -49,7 +49,8 @@
             <div class="form-group">
                 <button class="button" id="verify-code-button" type="submit" name="VerifyMobileAction" value="VerifyMobile">Verify number</button>
                 <button class="button sfa-hide-button" type="submit" name="VerifyMobileAction" value="VerifyMobile" tabindex="-1">Verify number</button>
-                <button id="ResendMobileVerificationCodeLink" type="submit" name="VerifyMobileAction" class="sfa-button-secondary" value="Resend" formnovalidate>Resend code</button>
+                <button id="ResendMobileVerificationCodeLink" type="submit" name="VerifyMobileAction" class="button sfa-button-secondary" value="Resend" formnovalidate>Resend code</button>
+                <a id="ResendMobileVerificationCodeLink" type="submit" name="VerifyMobileAction" class="button sfa-button-secondary" value="Resend" formnovalidate>Resend code</a>
             </div>
         }
     </div>
