--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/styles.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/styles.scss
@@ -2,7 +2,7 @@
 @import "_govuk-custom"; 
 @import "conditionals";
 
-@import "_button-links";
+@import "_sfa-buttons";
 @import "_tabbed-nav";
 @import "_inline-search";
 @import "_link-styles";
